Update href in main page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,15 +12,15 @@
     <body>
         <div class="navigation">
             <nav class="home-btn">
-                <a href="index.html">Home</nav>
+                <a href="/">Home</nav>
             <nav class="contacts-btn">
-                <a href="contacts.html">Contacts</a>
+                <a href="/contacts">Contacts</a>
             </nav>
             <nav class="guest-btn">
-                <a href="guestbook.html">Guestbook</a>
+                <a href="/guestbook">Guestbook</a>
             </nav>
             <nav class="posts-btn">
-                <a href="posts.html">Posts</a>
+                <a href="/posts">Posts</a>
             </nav>
         </div>
         <div class="ascii-art">
