Update meta tags on other pages

--- a/contacts/index.html
+++ b/contacts/index.html
@@ -21,12 +21,12 @@
     <meta property="og:url" content="https://d3m0k1d.ru/">
     <meta property="og:title" content="d3m0k1d - DevOps Engineer & InfoSec Student">
     <meta property="og:description" content="Personal website of Ilya Chernishev - DevOps Engineer and Information Security student. Projects, posts and technical blog.">
-    <meta property="og:image" content="https://d3m0k1d.ru/media/preview.png">
+    <meta property="og:image" content="https://d3m0k1d.ru/media/68747470333a2f2f63646e2e776f726c64766563746f726c6f676f2e636f6d2f6c6f676f732f6769742d69636f6e2e737667.svg">
     <meta property="og:site_name" content="d3m0k1d">
-        <link rel="icon" href="/media/68747470733a2f2f63646e2e776f726c64766563746f726c6f676f2e636f6d2f6c6f676f732f6769742d69636f6e2e737667.svg" type="image/x-icon">
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="/media/68747470733a2f2f63646e2e776f726c64766563746f726c6f676f2e636f6d2f6c6f676f732f6769742d69636f6e2e737667.svg" type="image/x-icon">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div class="navigation">
